Added more formatting exceptions

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Link Formatter</h1>
-  <h2>Enter Link Here:</h2>
+  <h1>URL Formatter</h1>
+  <h2>Link Formatter</h2>
   <form id="myForm">
     <input type="text" required name="rawUrl" id="rawUrl">
     <input type="submit" value="Format URL">
